# singapore-smb-support-agent

./: .env.example  .gitignore  AGENT.md  CHANGELOG.md  Codebase_Review_Analysis_Report.md  Codebase_Review_Update.md  FRONTEND_FIX_SUMMARY.md  FRONTEND_FIX_SUMMARY_ROUND2.md  IMPLEMENTATION_PLAN.md  LICENSE  PHASE1_README_CHECKLIST.md  PHASE8_3_STATUS.md  PHASE8_4_STATUS.md  PHASE8_FINAL_STATUS.md  PHASE9_STATUS.md  PROJECT_ARCHITECTURE_PLAN.md  PROJECT_MASTER_ANALYSIS_REPORT.md  PROJECT_MASTER_ANALYSIS_resolution.md  PROJECT_MASTER_ANALYSIS_validated_fix_plan.md  Project_Architecture_Document.md  Project_Review_Update.md  Project_Understanding.md  README.md  REMEDIATION_PLAN.md  REMEDIATION_PLAN_status.md  REMEDIATION_PLAN_v1.2.0.md  REMEDIATION_PLAN_v1.2.0_COMPLETION_SUMMARY.md  TODO.md  Understanding_Project.md  Understanding_Project_Update.md  codebase_files_list.txt  codebase_files_set.md  codebase_review_remediation_plan.md  docker-compose.yml.orig  docker_config_files.md  issues_and_suggested_remediation_plan.md  package-lock.json  phase8_improvement_suggestions.md  plan_docs_list.txt  plan_docs_set.md  (+5 more)
backend/: .dockerignore  .env  .env.example  .venv  Dockerfile  alembic.ini  docker-compose.yml  fix_pyproject_error.md  pip-list.txt  pyproject.toml  pytest.ini  test_bge-reranker.py  test_chat.py  test_knowledge_base.py  test_llm_connectivity.py
backend/app/: config.py  dependencies.py  main.py
backend/app/agent/: support_agent.py  validators.py
backend/app/agent/prompts/: __init__.py  system.py  templates.py
backend/app/agent/tools/: check_business_hours.py  escalate_to_human.py  get_customer_info.py  retrieve_knowledge.py
backend/app/alembic/: env.py
backend/app/api/routes/: auth.py  chat.py
backend/app/ingestion/: __init__.py  pipeline.py
backend/app/ingestion/chunkers/: chunker.py
backend/app/ingestion/embedders/: embedding.py  mock_embedding.py
backend/app/ingestion/parsers/: markitdown_parser.py
backend/app/memory/: long_term.py  manager.py  short_term.py  summarizer.py
backend/app/models/: database.py  domain.py  schemas.py
backend/app/rag/: context_compress.py  pipeline.py  qdrant_client.py  query_transform.py  reranker.py  retriever.py
backend/data/faq/: 01_pricing.md  02_business_hours.md  03_services_overview.md  04_returns_refunds.md  05_shipping_delivery.md
backend/data/policies/: privacy_policy.md  return_policy.md  shipping_policy.md  terms_of_service.md
backend/data/products/: product_catalog.md
backend/scripts/: ingest_documents.py
backend/tests/unit/: test_support_agent.py
docs/: AGENT_old.md  Customer_Enquiry_AI_Agent_design.md  D_Response.md  G_Response.md  G_Response_2.md  O_Response_2.md  O_Response_3.md  PHASE3_INGESTION_PIPELINE_COMPLETE.md  PHASE3_INGESTION_PIPELINE_STATUS.md  PHASE3_RAG_PIPELINE_COMPLETE.md  PHASE4_MEMORY_SYSTEM_COMPLETE.md  PHASE5_AGENT_IMPLEMENTATION_COMPLETE.md  PHASE8_FRONTEND_COMPLETE.md  PHASE8_SUMMARY.md  PHASE_STATUS_CORRECTED.md  Q_Response.md  RAG_Research_Report.md  Z_Response.md  prompt-2.md  prompt-ai-agent-plan-2.md  prompt-ai-agent-plan-3.md  prompt-ai-agent-plan-4.md  prompt-ai-agent-plan.md  prompt-research.md  prompt-review-plan.md  prompt-to-create-agent.md  prompts.md  research_plan.md  run_tests.md  share-links.txt  system_prompt_1.md  system_prompt_optimal.md  system_prompt_use.md
frontend/: .eslintrc.json  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/app/: globals.css  page.tsx
frontend/src/components/chat/: ChatHeader.tsx  ChatMessage.tsx  ChatMessages.tsx  ChatWidget.tsx  EvidenceSheet.tsx  SessionPulse.tsx  ThinkingState.tsx
frontend/src/components/ui/: button.tsx  citation-badge.tsx  confidence-ring.tsx  scroll-area.tsx  separator.tsx  sheet.tsx
frontend/src/stores/: chatStore.ts
frontend/src/types/: index.ts
my-app/: package-lock.json  package.json
plan/: PHASE8_FRONTEND_PLAN.md  PHASE8_REMEDIATION_PLAN.md  PHASE9_DATA_PREPARATION_PLAN.md  PROJECT_ARCHITECTURE_PLAN.md  data_ingestion_plan.md  g-plan.md  llm_connectivity_test_passed.md  original-plan.md  plan_phase_9,md  plan_update_README_PAD.md  remediation_plan_1.md  update_AGENT.md
v1-frontend/: package.json
v1-frontend/src/app/: globals.css  layout.tsx
v1-frontend/src/components/chat/: ChatHeader.tsx  ChatInput.tsx  ChatMessage.tsx  TypingIndicator.tsx
v1-frontend/src/components/ui/: card.tsx  label.tsx
v1-frontend/src/stores/: chatStore.ts
